gitops/ckcp/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kcp-in-a-pod
  name: ckcp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kcp-in-a-pod
  template:
    metadata:
      labels:
        app: kcp-in-a-pod
    spec:
      serviceAccountName: anyuid
      containers:
        - image: ckcp
          name: ckcp
          readinessProbe:
            initialDelaySeconds: 20
            periodSeconds: 3
            exec:
              command:
                - ls
                - /workspace/.kcp/admin.kubeconfig
