gitops/ckcp/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ckcp
  labels:
    app: kcp-in-a-pod
spec:
  host: kcp-kcp.apps.hacbs-build-08.hosted.upshift.rdu2.redhat.com 
  port:
    targetPort: 6443
  tls:
    termination: passthrough
  to:
    kind: Service
    name: ckcp-service
    weight: 100
  wildcardPolicy: None
